force-app/main/default/objects/Reservation__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Breakfast</label>
    <type>Checkbox</type>
</CustomField>