force-app/main/default/objects/Reservation__c/fields/Breakfast_Type__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Type__c</fullName>
    <label>Breakfast Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Breakfast__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Non-Vegeterian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>