force-app/main/default/objects/Reservation__c/fields/Cancelation_fee_covered__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_fee_covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelation fee covered</label>
    <type>Checkbox</type>
</CustomField>