force-app/main/default/objects/Reservation__c/fields/Cancelation_without_cost__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_without_cost__c</fullName>
    <description>You can cancel with no cost only 3&lt; before check in</description>
    <formula>Check_In_Date__c - today() &gt; 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancelation without cost</label>
    <type>Checkbox</type>
</CustomField>