force-app/main/default/objects/Reservation__c/fields/Days_number__c.field-meta.xml
<CustomField>
    <fullName>Days_number__c</fullName>
    <formula>Check_out_Date__c -  Check_In_Date__c</formula>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>