force-app/main/default/objects/Reservation__c/fields/Guest_name__c.field-meta.xml
<CustomField>
    <fullName>Guest_name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guest Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>