force-app/main/default/objects/Reservation__c/fields/Reservation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Amount__c</fullName>
    <label>Reservation Amount</label>
    <summarizedField>Reservation_line_item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Reservation_line_item__c.Reservation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>