force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_out_Date__c</columns>
    <columns>Guest_name__c</columns>
    <columns>Days_number__c</columns>
    <columns>Reservation_Amount__c</columns>
    <columns>Room__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>